tests/snapshots/syntactic_snapshots__missing_access_control_positive.snap
---
source: tests/syntactic_snapshots.rs
expression: output
---
1:1 - modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`
