tests/snapshots/syntactic_snapshots__oracle_zero_price_negative.snap
---
source: tests/syntactic_snapshots.rs
expression: output
---
1:1 - modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`
4:11 - error_const_naming: Error constant `E_ZERO_PRICE` should use EPascalCase. Consider renaming to `EZeroPrice`.
