tests/snapshots/syntactic_snapshots__unused_return_value_negative.snap
---
source: tests/semantic_snapshots.rs
expression: output
---
1:1 - modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`
13:26 - modern_method_syntax: Prefer method syntax: `coin.split(...)`
14:9 - modern_method_syntax: Prefer method syntax: `split_coin.public_transfer(...)`
23:9 - modern_method_syntax: Prefer method syntax: `taken.destroy_zero(...)`
32:13 - modern_method_syntax: Prefer method syntax: `coin.split(...)`
33:13 - modern_method_syntax: Prefer method syntax: `ctx.sender(...)`
