tests/snapshots/syntactic_snapshots__unused_return_value_positive.snap
---
source: tests/syntactic_snapshots.rs
expression: output
---
1:1 - modern_module_syntax: Use Move 2024 module label syntax: `module pkg::mod;`
12:9 - modern_method_syntax: Prefer method syntax: `coin.split(...)`
32:9 - modern_method_syntax: Prefer method syntax: `coin.split(...)`
33:9 - modern_method_syntax: Prefer method syntax: `coin.split(...)`
